Moved demo button to top of the page

--- a/demo/rythm.css
+++ b/demo/rythm.css
@@ -7,8 +7,7 @@ body {
 }
 
 #player {
-  position: fixed;
-  bottom: -5px;
+  margin-bottom: 25px;
   padding: 10px;
   background-color: #000010;
   border-radius: 5px;
