--- a/demo/rythm.css
+++ b/demo/rythm.css
@@ -241,8 +241,9 @@ section:last-child {
 
 .borderWidth1,
 .borderWidth2 {
-  min-width: 15px;
-  min-height: 15px;
+  min-width: 20px;
+  min-height: 20px;
+  border-radius: 2px;
 }
 
 /* Pretty printing styles. Used with prettify.js. */
