--- a/demo/rythm.css
+++ b/demo/rythm.css
@@ -32,17 +32,11 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1em;
-  min-width: 150px;
-}
-.rythm.fontColor {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  font-size: 1.5em;
   min-width: 200px;
-  font-size: 2em;
 }
-.fontSize__placeholder {
+
+.font__placeholder {
   height: 20px;
   width: 20px;
   margin-right: 10px;
