--- a/demo/rythm.css
+++ b/demo/rythm.css
@@ -33,15 +33,15 @@ h1 {
   align-items: center;
   justify-content: center;
   font-size: 1.5em;
-  min-width: 200px;
+  min-width: 150px;
 }
 
-.font__placeholder {
-  height: 20px;
-  width: 20px;
-  margin-right: 10px;
-  background-color: white;
-  display: inline-block;
+.rythm.fontColor {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 200px;
+  font-size: 2em;
 }
 
 #quote {
